--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.4",
+    "bcrypt": "^6.0.0",
     "bullmq": "^5.67.2",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.2",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
