--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
     "start": "node dist/index.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'node --loader ts-node/esm' src/index.ts",
     "build": "tsc",
+    "typeorm": "typeorm-ts-node-esm -d src/config/database.ts",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:create": "npm run typeorm -- migration:create",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "migration:show": "npm run typeorm -- migration:show",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.4",
+    "basic-ftp": "^5.1.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.67.2",
     "cors": "^2.8.6",
@@ -27,11 +38,13 @@
     "mysql2": "^3.16.2",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
+    "ssh2-sftp-client": "^12.0.1",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
+    "@types/ssh2-sftp-client": "^9.0.6",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
