--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.1.0",
+    "@types/ssh2-sftp-client": "^9.0.6",
     "axios": "^1.13.4",
     "basic-ftp": "^5.1.0",
     "bcrypt": "^6.0.0",
@@ -39,14 +42,11 @@
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
     "ssh2-sftp-client": "^12.0.1",
-    "typeorm": "^0.3.28"
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.28",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.1.0",
-    "@types/ssh2-sftp-client": "^9.0.6",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "nodemon": "^3.1.11"
   }
 }
